--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ requires-python = ">=3.9"
 dependencies = [
     # AutoGen Framework
     "pyautogen>=0.2.0",
+    "autogen>=0.9.0",
 
     # Azure Services
     "azure-identity>=1.15.0",
